# governance-layer

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  atested  fly.toml  pytest.ini  requirements.txt  run-operator-ui.sh  wrangler.jsonc
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
LOGS/: report-20260215T181506Z.md  report-20260215T182000Z.md  report-20260215T182526Z.md  report-20260215T183226Z.md  report-canonical-binding-20260217T103230Z.md  report-cap-cfg-untrusted-20260217T102147Z.md  report-cap-registry-hash-20260216T103339Z.md  report-cap-registry-path-arg-audit-20260217T102527Z.md  report-fs-list-formal-20260215T203132Z.md  report-fs-mkdir-phase2c1-20260217T104936Z.md  report-governed-tool-wrapper-20260215T200107Z.md  report-mcp-20260215T184542Z.md  report-mcp-cap-spec-wrapper-20260215T210747Z.md  report-mcp-chain-guard-20260215T192001Z.md  report-mcp-chain-guard-v2-20260215T192512Z.md  report-mcp-fs-list-20260215T201657Z.md  report-mcp-fs-read-20260215T205117Z.md  report-mcp-quarantine-20260215T193040Z.md  report-mcp-real-20260215T190339Z.md  report-replay-record-20260217T104030Z.md
capabilities/: capability-registry.json  (+3 more)
quality-service/: Cargo.toml  build.rs
quality-service/prebuilt/: quality-service-aarch64-apple-darwin  quality-service-manifest.json
quality-service/src/: behavioral.rs  canonical.rs  checks.rs  config.rs  element.rs  governance.rs  key.rs  lib.rs  main.rs  service.rs  spc.rs  writer.rs
quality-service/tests/: integration.rs
(+2087 files in other folders)
